@@ -1,3 +1,9 @@
+2005-03-02  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (checker): added slot reverse
+	(new-checker): accept reverse
+	(print-tables-1): use reverse
+
 2005-03-01  Sam Steingold  <sds@gnu.org>
 
 	* utils/modprep.lisp (checker): added slot suffix
